<resources>
    <string name="app_name">Books</string>
    <string name="error_loading_data_from_google_books">Error Loading data from google books</string>
    <string name="title_textview">Title TextView</string>
    <string name="publisher_text">publisher text</string>
    <string name="search">Search</string>
    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_publisher">Publisher</string>
    <string name="hint_isbn">ISBN</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="no_search_user">Please insert valid search terms</string>
</resources>
