<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/margin_search_activity"
        />

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_author"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_height="wrap_content"
        android:hint="@string/hint_publisher"
        android:ems="10"
        android:inputType="textPersonName"
        />
<!-- hint  Isbn is like a unique identifier of a book
        -  common standard all over the world
-->
    <EditText
        android:id="@+id/etIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_isbn"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/btn_search"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/search_button_shape"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:text="@string/search" />
</LinearLayout>